--- a/foundry.toml
+++ b/foundry.toml
@@ -3,5 +3,8 @@ src = "src"
 out = "out"
 libs = ["lib"]
 remappings = ['@openzeppelin=lib/openzeppelin-contracts']
+[rpc_endpoints]
+sepolia = "https://sepolia.infura.io/v3/<infura-project-id>"
+
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
